cluster/apps/comms/matrix-webhook/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: matrix-webhook
  namespace: comms
spec:
  selector:
    matchLabels:
      app: matrix-webhook
  template:
    metadata:
      labels:
        app: matrix-webhook
    spec:
      containers:
        - name: matrix-webhook
          image: nim65s/matrix-webhook
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 4785
