cluster/apps/comms/matrix-webhook/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: matrix-webhook
  namespace: comms
spec:
  selector:
    app: matrix-webhook
  ports:
    - port: 8080
      targetPort: 4785
