cluster/apps/comms/matrix-webhook/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: matrix-hook
  namespace: comms
  annotations:
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: letsencrypt-production
    external-dns/is-public: "true"
    haproxy-ingress-proxy.pfsense.org/enabled: "true"
    haproxy-ingress-proxy.pfsense.org/frontend: "https-443"
    haproxy-ingress-proxy.pfsense.org/backend: "nginx-443"
    external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
spec:
  ingressClassName: "nginx"
  tls:
    - hosts:
        - "matrix-hook.${SECRET_DOMAIN}"
      # secretName: "${SECRET_DOMAIN//./-}-tls"
  rules:
    - host: "matrix-hook.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: matrix-webhook
                port:
                  number: 8080
